finalized     fixed the content at the center by adding proper padding for the buttons and added the gaps for the the items inside the container

--- a/foundations/flex/06-flex-layout/style.css
+++ b/foundations/flex/06-flex-layout/style.css
@@ -18,6 +18,12 @@ button {
   border: none;
   border-radius: 8px;
   background: #eee;
+  padding: 7px;
+}
+
+.buttons {
+  display: flex;
+  gap: 5px;
 }
 
 input {
@@ -33,6 +39,7 @@ input {
   align-items: center;
   flex-direction: column;
   flex-grow: 1;
+  gap: 16px;
 }
 
 ul {
